# otus-cpp-hw-01

./: CMakeLists.txt  lib.h  libTests.cpp  main.cpp
.github/workflows/: release.yaml
src/: CMakeLists.txt  lib.cpp  version.h.in
test/: CMakeLists.txt  libTests.cpp
